# serializer version: 1
# name: TestBuildDashboardSnapshot.test_today_range_matches_snapshot
  '''
  <!DOCTYPE html>
  <html lang="en">
  <head>
  <meta charset="UTF-8">
  <title>Focus Monitor — Dashboard</title>
  <style>
  :root {
    /* Colors — light palette (default) */
    --color-bg: #f7f8f9;
    --color-surface: #ffffff;
    --color-surface-raised: #ffffff;
    --color-border: #e4e6ea;
    --color-text: #1d2026;
    --color-text-muted: #596172;
    --color-text-subtle: #8b93a4;
    --color-accent: #4a9b8e;
    --color-accent-hover: #3d837a;
    --color-score-good: #4a9b8e;
    --color-score-mid: #d69e2e;
    --color-score-bad: #c85450;
    --color-distraction: #c85450;
    --color-planned: #4a9b8e;
  
    /* Spacing — 4px base unit, geometric */
    --space-1: 4px;
    --space-2: 8px;
    --space-3: 12px;
    --space-4: 16px;
    --space-5: 24px;
    --space-6: 32px;
    --space-7: 48px;
    --space-8: 64px;
  
    /* Radii */
    --radius-sm: 4px;
    --radius-md: 8px;
    --radius-lg: 12px;
  
    /* Shadows */
    --shadow-sm: 0 1px 2px rgba(15, 23, 42, 0.04), 0 1px 1px rgba(15, 23, 42, 0.03);
    --shadow-md: 0 4px 8px rgba(15, 23, 42, 0.06), 0 1px 2px rgba(15, 23, 42, 0.04);
  
    /* Type scale */
    --font-size-xs: 0.72rem;
    --font-size-sm: 0.82rem;
    --font-size-base: 0.95rem;
    --font-size-lg: 1.1rem;
    --font-size-xl: 1.35rem;
    --font-size-2xl: 1.8rem;
    --font-size-5xl: 3.5rem;
  
    --font-weight-regular: 400;
    --font-weight-medium: 500;
    --font-weight-semibold: 600;
  
    --font-family-sans: -apple-system, "SF Pro Text", "Inter", system-ui, "Segoe UI", Roboto, sans-serif;
  }
  
  @media (prefers-color-scheme: dark) {
    :root {
      --color-bg: #1a1d23;
      --color-surface: #22262e;
      --color-surface-raised: #2a2f38;
      --color-border: #343944;
      --color-text: #e6e8ec;
      --color-text-muted: #9aa3b2;
      --color-text-subtle: #6d7584;
      --color-accent: #5cb5a6;
      --color-accent-hover: #72c4b7;
      --color-score-good: #5cb5a6;
      --color-score-mid: #e6b050;
      --color-score-bad: #e07a75;
      --color-distraction: #e07a75;
      --color-planned: #5cb5a6;
    }
  }
  
  * { margin: 0; padding: 0; box-sizing: border-box; }
  
  html, body {
    background: var(--color-bg);
    color: var(--color-text);
    font-family: var(--font-family-sans);
    font-size: var(--font-size-base);
    font-weight: var(--font-weight-regular);
    line-height: 1.55;
    -webkit-font-smoothing: antialiased;
  }
  
  .tabular { font-variant-numeric: tabular-nums; font-feature-settings: "tnum"; }
  
  .container {
    max-width: 1100px;
    margin: 0 auto;
    padding: var(--space-6) var(--space-5) var(--space-8);
  }
  
  /* ── Header ─────────────────────────────────────────────────────────────── */
  
  .page-header {
    display: flex;
    justify-content: space-between;
    align-items: baseline;
    margin-bottom: var(--space-6);
    padding-bottom: var(--space-4);
    border-bottom: 1px solid var(--color-border);
  }
  
  .brand {
    display: flex;
    align-items: baseline;
    gap: var(--space-3);
  }
  
  .brand-name {
    font-size: var(--font-size-xl);
    font-weight: var(--font-weight-semibold);
    color: var(--color-text);
    letter-spacing: -0.01em;
  }
  
  .brand-date {
    font-size: var(--font-size-sm);
    color: var(--color-text-muted);
  }
  
  .range-toggle {
    display: flex;
    gap: var(--space-1);
    font-size: var(--font-size-sm);
  }
  
  .range-toggle a {
    color: var(--color-text-muted);
    text-decoration: none;
    padding: var(--space-2) var(--space-3);
    border-radius: var(--radius-md);
    transition: background 0.15s ease, color 0.15s ease;
  }
  
  .range-toggle a:hover {
    color: var(--color-text);
    background: var(--color-surface);
  }
  
  .range-toggle a.current {
    color: var(--color-text);
    background: var(--color-surface);
    font-weight: var(--font-weight-medium);
    box-shadow: var(--shadow-sm);
  }
  
  .range-toggle a:focus-visible {
    outline: 2px solid var(--color-accent);
    outline-offset: 2px;
  }
  
  /* ── Zones ──────────────────────────────────────────────────────────────── */
  
  .zone {
    display: grid;
    gap: var(--space-5);
    margin-bottom: var(--space-5);
  }
  
  .zone-hero { grid-template-columns: minmax(0, 1fr) minmax(0, 2fr); }
  .zone-primary,
  .zone-secondary { grid-template-columns: minmax(0, 1fr) minmax(0, 1fr); }
  
  @media (max-width: 900px) {
    .zone-hero,
    .zone-primary,
    .zone-secondary { grid-template-columns: minmax(0, 1fr); }
  }
  
  /* ── Card ───────────────────────────────────────────────────────────────── */
  
  .card {
    background: var(--color-surface);
    border: 1px solid var(--color-border);
    border-radius: var(--radius-lg);
    padding: var(--space-5);
    box-shadow: var(--shadow-sm);
  }
  
  .card-title {
    font-size: var(--font-size-sm);
    font-weight: var(--font-weight-medium);
    color: var(--color-text-muted);
    margin-bottom: var(--space-4);
  }
  
  /* ── Score card ─────────────────────────────────────────────────────────── */
  
  .score {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 100%;
  }
  
  .score-big {
    font-size: var(--font-size-5xl);
    font-weight: var(--font-weight-semibold);
    line-height: 1;
    letter-spacing: -0.02em;
    font-variant-numeric: tabular-nums;
    color: var(--color-text);
    margin: var(--space-3) 0 var(--space-2);
  }
  
  .score-big.good { color: var(--color-score-good); }
  .score-big.mid  { color: var(--color-score-mid); }
  .score-big.bad  { color: var(--color-score-bad); }
  
  .score-label {
    font-size: var(--font-size-sm);
    color: var(--color-text-subtle);
  }
  
  .score-meta {
    display: flex;
    gap: var(--space-5);
    margin-top: var(--space-4);
    font-size: var(--font-size-sm);
    color: var(--color-text-muted);
  }
  
  .score-meta strong {
    display: block;
    font-size: var(--font-size-base);
    font-weight: var(--font-weight-semibold);
    color: var(--color-text);
    font-variant-numeric: tabular-nums;
  }
  
  /* ── Timeline card ──────────────────────────────────────────────────────── */
  
  .timeline-card { min-height: 100%; display: flex; flex-direction: column; }
  
  .timeline-svg-wrap {
    flex: 1;
    display: flex;
    align-items: center;
  }
  
  .timeline-svg {
    width: 100%;
    height: 140px;
    display: block;
  }
  
  .timeline-svg .tl-axis {
    stroke: var(--color-border);
    stroke-width: 1;
  }
  
  .timeline-svg .tl-label {
    fill: var(--color-text-subtle);
    font-size: 11px;
    font-family: var(--font-family-sans);
  }
  
  /* ── List rows (planned / discovered / apps / nudges) ──────────────────── */
  
  .list { list-style: none; }
  
  .list li {
    padding: var(--space-3) 0;
    border-bottom: 1px solid var(--color-border);
    display: grid;
    gap: var(--space-1);
  }
  
  .list li:last-child { border-bottom: none; padding-bottom: 0; }
  .list li:first-child { padding-top: 0; }
  
  .row-main {
    display: flex;
    justify-content: space-between;
    align-items: baseline;
    gap: var(--space-3);
  }
  
  .row-name {
    color: var(--color-text);
    font-weight: var(--font-weight-medium);
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
  }
  
  .row-meta {
    font-size: var(--font-size-sm);
    color: var(--color-text-subtle);
    font-variant-numeric: tabular-nums;
    white-space: nowrap;
  }
  
  .bar {
    height: 4px;
    background: var(--color-border);
    border-radius: 2px;
    overflow: hidden;
    margin-top: var(--space-2);
  }
  
  .bar-fill {
    height: 100%;
    background: var(--color-planned);
    border-radius: 2px;
  }
  
  .row-seen {
    font-size: var(--font-size-xs);
    color: var(--color-text-subtle);
  }
  
  .row-signals {
    display: flex;
    flex-wrap: wrap;
    gap: var(--space-1);
    margin-top: var(--space-2);
  }
  
  .pill {
    display: inline-block;
    padding: 2px 8px;
    font-size: var(--font-size-xs);
    color: var(--color-text-muted);
    background: var(--color-bg);
    border: 1px solid var(--color-border);
    border-radius: 100px;
  }
  
  .pill.promoted {
    color: var(--color-accent);
    border-color: var(--color-accent);
    background: transparent;
  }
  
  .empty {
    font-style: italic;
    color: var(--color-text-subtle);
    font-size: var(--font-size-sm);
    padding: var(--space-4) 0;
    text-align: center;
  }
  
  .footer-note {
    font-size: var(--font-size-xs);
    color: var(--color-text-subtle);
    text-align: center;
    margin-top: var(--space-6);
  }
  
  /* ── Plan-management buttons & forms ────────────────────────────────────── */
  
  .btn {
    display: inline-flex;
    align-items: center;
    gap: var(--space-1);
    padding: var(--space-1) var(--space-3);
    font-size: var(--font-size-xs);
    font-family: var(--font-family-sans);
    font-weight: var(--font-weight-medium);
    color: var(--color-text-muted);
    background: var(--color-bg);
    border: 1px solid var(--color-border);
    border-radius: var(--radius-sm);
    cursor: pointer;
    text-decoration: none;
    transition: background 0.15s ease, color 0.15s ease, border-color 0.15s ease;
  }
  
  .btn:hover {
    color: var(--color-text);
    border-color: var(--color-text-subtle);
  }
  
  .btn:focus-visible {
    outline: 2px solid var(--color-accent);
    outline-offset: 2px;
  }
  
  .btn-primary {
    color: #ffffff;
    background: var(--color-accent);
    border-color: var(--color-accent);
  }
  
  .btn-primary:hover {
    background: var(--color-accent-hover);
    border-color: var(--color-accent-hover);
    color: #ffffff;
  }
  
  .row-actions {
    display: flex;
    gap: var(--space-2);
    margin-top: var(--space-2);
    opacity: 0.55;
    transition: opacity 0.15s ease;
  }
  
  .list li:hover .row-actions,
  .list li:focus-within .row-actions { opacity: 1; }
  
  .inline-form {
    display: inline-flex;
    align-items: center;
    gap: var(--space-2);
    margin: 0;
  }
  
  /* CSS-only toggle for inline edit / add forms. A hidden checkbox holds the
     state; its :checked state reveals the row-edit sibling and hides row-view. */
  
  .edit-toggle {
    position: absolute;
    opacity: 0;
    pointer-events: none;
    width: 1px;
    height: 1px;
  }
  
  .row-edit {
    display: none;
    flex-direction: column;
    gap: var(--space-2);
    padding: var(--space-3) 0;
  }
  
  .edit-toggle:checked + .row-view { display: none; }
  .edit-toggle:checked + .row-view + .row-edit { display: flex; }
  
  .row-edit input[type="text"],
  .row-edit input:not([type="hidden"]) {
    padding: var(--space-2) var(--space-3);
    font-family: var(--font-family-sans);
    font-size: var(--font-size-sm);
    color: var(--color-text);
    background: var(--color-bg);
    border: 1px solid var(--color-border);
    border-radius: var(--radius-sm);
  }
  
  .row-edit input:focus {
    outline: 2px solid var(--color-accent);
    outline-offset: 1px;
    border-color: var(--color-accent);
  }
  
  .form-actions {
    display: flex;
    gap: var(--space-2);
    margin-top: var(--space-1);
  }
  
  .add-task-row {
    border-bottom: none !important;
    padding-top: var(--space-3) !important;
  }
  
  .add-task-row .row-view {
    text-align: left;
  }
  </style>
  <script src="/static/htmx.min.js" defer></script>
  </head>
  <body hx-headers='{"X-CSRF-Token": "TEST_CSRF_TOKEN_FIXED_VALUE_FOR_SNAPSHOT_STABILITY_DO_NOT_USE_IN_PROD"}'>
  <main class="container">
  <header class="page-header">
    <div class="brand">
      <span class="brand-name">Focus Monitor</span>
      <span class="brand-date">Sunday, April 12</span>
    </div>
    <nav class="range-toggle" aria-label="Time range"><a href="/?range=today" class="current" aria-current="page">Today</a><a href="/?range=yesterday">Yesterday</a><a href="/?range=7d">Last 7 days</a></nav>
  </header>
  <section class="zone zone-hero" aria-label="Today at a glance">
  <div class="card score">
    <div class="card-title">Focus score</div>
    <div class="score-big mid" aria-label="Average focus score">58</div>
    <div class="score-label">out of 100</div>
    <div class="score-meta">
      <div><strong>4</strong>analyses</div>
      <div><strong>0</strong>nudges</div>
    </div>
  </div>
  <div class="card timeline-card">
    <div class="card-title">Timeline</div>
    <div class="timeline-svg-wrap"><svg class="timeline-svg" viewBox="0 0 1440 120" preserveAspectRatio="none" role="img" aria-label="Focus score timeline"><rect x="570.0" y="20" width="5.0" height="70" fill="var(--color-score-good)"/><rect x="600.0" y="20" width="5.0" height="70" fill="var(--color-score-good)"/><rect x="690.0" y="20" width="5.0" height="70" fill="var(--color-score-bad)"/><rect x="780.0" y="20" width="5.0" height="70" fill="var(--color-score-mid)"/><line class="tl-axis" x1="0" y1="91" x2="1440" y2="91"/><text class="tl-label" x="0" y="108" text-anchor="start">0:00</text><text class="tl-label" x="360" y="108" text-anchor="middle">6:00</text><text class="tl-label" x="720" y="108" text-anchor="middle">12:00</text><text class="tl-label" x="1080" y="108" text-anchor="middle">18:00</text><text class="tl-label" x="1440" y="108" text-anchor="end">24:00</text></svg></div>
  </div>
  </section>
  <section class="zone zone-primary" aria-label="Plan and discoveries">
  <div id="planned-card" class="card"><div class="card-title">Planned focus</div><ul class="list"><li class="planned-row"><input type="checkbox" id="ptask-edit-focus-monitor" class="edit-toggle" aria-hidden="true"><div class="row-view"><div class="row-main"><span class="row-name">focus-monitor</span><span class="row-meta">2 ticks</span></div><div class="bar"><div class="bar-fill" style="width:100%"></div></div><div class="row-actions"><label for="ptask-edit-focus-monitor" class="btn">edit</label><form class="inline-form" hx-post="/api/planned-tasks/focus-monitor/delete" hx-target="#planned-card" hx-swap="outerHTML" hx-confirm="Delete &quot;focus-monitor&quot;?"><input type="hidden" name="csrf" value="TEST_CSRF_TOKEN_FIXED_VALUE_FOR_SNAPSHOT_STABILITY_DO_NOT_USE_IN_PROD"><button type="submit" class="btn" aria-label="Delete focus-monitor">delete</button></form></div></div><form class="row-edit" hx-post="/api/planned-tasks/focus-monitor" hx-target="#planned-card" hx-swap="outerHTML"><input type="hidden" name="csrf" value="TEST_CSRF_TOKEN_FIXED_VALUE_FOR_SNAPSHOT_STABILITY_DO_NOT_USE_IN_PROD"><input name="signals" value="focus-monitor, focusmonitor" placeholder="signals, comma, separated" aria-label="Signals for focus-monitor"><input name="notes" value="Work on the focus-monitor project itself." placeholder="notes" aria-label="Notes for focus-monitor"><div class="form-actions"><button type="submit" class="btn btn-primary">save</button><label for="ptask-edit-focus-monitor" class="btn">cancel</label></div></form></li><li class="planned-row"><input type="checkbox" id="ptask-edit-deep-reading" class="edit-toggle" aria-hidden="true"><div class="row-view"><div class="row-main"><span class="row-name">Deep Reading</span><span class="row-meta">not seen</span></div><div class="bar"><div class="bar-fill" style="width:0%"></div></div><div class="row-actions"><label for="ptask-edit-deep-reading" class="btn">edit</label><form class="inline-form" hx-post="/api/planned-tasks/Deep%20Reading/delete" hx-target="#planned-card" hx-swap="outerHTML" hx-confirm="Delete &quot;Deep Reading&quot;?"><input type="hidden" name="csrf" value="TEST_CSRF_TOKEN_FIXED_VALUE_FOR_SNAPSHOT_STABILITY_DO_NOT_USE_IN_PROD"><button type="submit" class="btn" aria-label="Delete Deep Reading">delete</button></form></div></div><form class="row-edit" hx-post="/api/planned-tasks/Deep%20Reading" hx-target="#planned-card" hx-swap="outerHTML"><input type="hidden" name="csrf" value="TEST_CSRF_TOKEN_FIXED_VALUE_FOR_SNAPSHOT_STABILITY_DO_NOT_USE_IN_PROD"><input name="signals" value="paper.pdf, arxiv" placeholder="signals, comma, separated" aria-label="Signals for Deep Reading"><input name="notes" value="" placeholder="notes" aria-label="Notes for Deep Reading"><div class="form-actions"><button type="submit" class="btn btn-primary">save</button><label for="ptask-edit-deep-reading" class="btn">cancel</label></div></form></li><li class="add-task-row"><input type="checkbox" id="ptask-add" class="edit-toggle" aria-hidden="true"><div class="row-view"><label for="ptask-add" class="btn">+ Add planned task</label></div><form class="row-edit" hx-post="/api/planned-tasks" hx-target="#planned-card" hx-swap="outerHTML"><input type="hidden" name="csrf" value="TEST_CSRF_TOKEN_FIXED_VALUE_FOR_SNAPSHOT_STABILITY_DO_NOT_USE_IN_PROD"><input name="name" placeholder="task name" required aria-label="New task name"><input name="signals" placeholder="signals, comma, separated" aria-label="New task signals"><input name="notes" placeholder="notes" aria-label="New task notes"><div class="form-actions"><button type="submit" class="btn btn-primary">add</button><label for="ptask-add" class="btn">cancel</label></div></form></li></ul></div>
  <div id="discovered-card" class="card"><div class="card-title">Discovered activities</div><ul class="list"><li><div class="row-main"><span class="row-name">news </span><span class="row-meta">seen 1×</span></div><div class="row-seen">last Apr 12, 11:30</div><div class="row-actions"><form class="inline-form" hx-post="/api/discoveries/news/promote" hx-target="#discovered-card" hx-swap="outerHTML"><input type="hidden" name="csrf" value="TEST_CSRF_TOKEN_FIXED_VALUE_FOR_SNAPSHOT_STABILITY_DO_NOT_USE_IN_PROD"><button type="submit" class="btn btn-primary" aria-label="Promote news">promote</button></form><form class="inline-form" hx-post="/api/discoveries/news/hide" hx-target="#discovered-card" hx-swap="outerHTML"><input type="hidden" name="csrf" value="TEST_CSRF_TOKEN_FIXED_VALUE_FOR_SNAPSHOT_STABILITY_DO_NOT_USE_IN_PROD"><button type="submit" class="btn" aria-label="Hide news">hide</button></form></div></li></ul></div>
  </section>
  <section class="zone zone-secondary" aria-label="Apps and nudges">
  <div class="card"><div class="card-title">Top apps</div><ul class="list"><li><div class="row-main"><span class="row-name">Code</span><span class="row-meta">2×</span></div><div class="bar"><div class="bar-fill" style="width:100%"></div></div></li><li><div class="row-main"><span class="row-name">Terminal</span><span class="row-meta">2×</span></div><div class="bar"><div class="bar-fill" style="width:100%"></div></div></li><li><div class="row-main"><span class="row-name">Safari</span><span class="row-meta">1×</span></div><div class="bar"><div class="bar-fill" style="width:50%"></div></div></li><li><div class="row-main"><span class="row-name">unknown</span><span class="row-meta">1×</span></div><div class="bar"><div class="bar-fill" style="width:50%"></div></div></li></ul></div>
  <div class="card"><div class="card-title">Recent nudges</div><div class="empty">No nudges sent.</div></div>
  </section>
  <p class="footer-note">Focus Monitor · local-only · all data stays on this Mac</p>
  </main>
  </body>
  </html>
  
  '''
# ---
# name: TestBuildDashboardSnapshot.test_yesterday_range_matches_snapshot
  '''
  <!DOCTYPE html>
  <html lang="en">
  <head>
  <meta charset="UTF-8">
  <title>Focus Monitor — Dashboard</title>
  <style>
  :root {
    /* Colors — light palette (default) */
    --color-bg: #f7f8f9;
    --color-surface: #ffffff;
    --color-surface-raised: #ffffff;
    --color-border: #e4e6ea;
    --color-text: #1d2026;
    --color-text-muted: #596172;
    --color-text-subtle: #8b93a4;
    --color-accent: #4a9b8e;
    --color-accent-hover: #3d837a;
    --color-score-good: #4a9b8e;
    --color-score-mid: #d69e2e;
    --color-score-bad: #c85450;
    --color-distraction: #c85450;
    --color-planned: #4a9b8e;
  
    /* Spacing — 4px base unit, geometric */
    --space-1: 4px;
    --space-2: 8px;
    --space-3: 12px;
    --space-4: 16px;
    --space-5: 24px;
    --space-6: 32px;
    --space-7: 48px;
    --space-8: 64px;
  
    /* Radii */
    --radius-sm: 4px;
    --radius-md: 8px;
    --radius-lg: 12px;
  
    /* Shadows */
    --shadow-sm: 0 1px 2px rgba(15, 23, 42, 0.04), 0 1px 1px rgba(15, 23, 42, 0.03);
    --shadow-md: 0 4px 8px rgba(15, 23, 42, 0.06), 0 1px 2px rgba(15, 23, 42, 0.04);
  
    /* Type scale */
    --font-size-xs: 0.72rem;
    --font-size-sm: 0.82rem;
    --font-size-base: 0.95rem;
    --font-size-lg: 1.1rem;
    --font-size-xl: 1.35rem;
    --font-size-2xl: 1.8rem;
    --font-size-5xl: 3.5rem;
  
    --font-weight-regular: 400;
    --font-weight-medium: 500;
    --font-weight-semibold: 600;
  
    --font-family-sans: -apple-system, "SF Pro Text", "Inter", system-ui, "Segoe UI", Roboto, sans-serif;
  }
  
  @media (prefers-color-scheme: dark) {
    :root {
      --color-bg: #1a1d23;
      --color-surface: #22262e;
      --color-surface-raised: #2a2f38;
      --color-border: #343944;
      --color-text: #e6e8ec;
      --color-text-muted: #9aa3b2;
      --color-text-subtle: #6d7584;
      --color-accent: #5cb5a6;
      --color-accent-hover: #72c4b7;
      --color-score-good: #5cb5a6;
      --color-score-mid: #e6b050;
      --color-score-bad: #e07a75;
      --color-distraction: #e07a75;
      --color-planned: #5cb5a6;
    }
  }
  
  * { margin: 0; padding: 0; box-sizing: border-box; }
  
  html, body {
    background: var(--color-bg);
    color: var(--color-text);
    font-family: var(--font-family-sans);
    font-size: var(--font-size-base);
    font-weight: var(--font-weight-regular);
    line-height: 1.55;
    -webkit-font-smoothing: antialiased;
  }
  
  .tabular { font-variant-numeric: tabular-nums; font-feature-settings: "tnum"; }
  
  .container {
    max-width: 1100px;
    margin: 0 auto;
    padding: var(--space-6) var(--space-5) var(--space-8);
  }
  
  /* ── Header ─────────────────────────────────────────────────────────────── */
  
  .page-header {
    display: flex;
    justify-content: space-between;
    align-items: baseline;
    margin-bottom: var(--space-6);
    padding-bottom: var(--space-4);
    border-bottom: 1px solid var(--color-border);
  }
  
  .brand {
    display: flex;
    align-items: baseline;
    gap: var(--space-3);
  }
  
  .brand-name {
    font-size: var(--font-size-xl);
    font-weight: var(--font-weight-semibold);
    color: var(--color-text);
    letter-spacing: -0.01em;
  }
  
  .brand-date {
    font-size: var(--font-size-sm);
    color: var(--color-text-muted);
  }
  
  .range-toggle {
    display: flex;
    gap: var(--space-1);
    font-size: var(--font-size-sm);
  }
  
  .range-toggle a {
    color: var(--color-text-muted);
    text-decoration: none;
    padding: var(--space-2) var(--space-3);
    border-radius: var(--radius-md);
    transition: background 0.15s ease, color 0.15s ease;
  }
  
  .range-toggle a:hover {
    color: var(--color-text);
    background: var(--color-surface);
  }
  
  .range-toggle a.current {
    color: var(--color-text);
    background: var(--color-surface);
    font-weight: var(--font-weight-medium);
    box-shadow: var(--shadow-sm);
  }
  
  .range-toggle a:focus-visible {
    outline: 2px solid var(--color-accent);
    outline-offset: 2px;
  }
  
  /* ── Zones ──────────────────────────────────────────────────────────────── */
  
  .zone {
    display: grid;
    gap: var(--space-5);
    margin-bottom: var(--space-5);
  }
  
  .zone-hero { grid-template-columns: minmax(0, 1fr) minmax(0, 2fr); }
  .zone-primary,
  .zone-secondary { grid-template-columns: minmax(0, 1fr) minmax(0, 1fr); }
  
  @media (max-width: 900px) {
    .zone-hero,
    .zone-primary,
    .zone-secondary { grid-template-columns: minmax(0, 1fr); }
  }
  
  /* ── Card ───────────────────────────────────────────────────────────────── */
  
  .card {
    background: var(--color-surface);
    border: 1px solid var(--color-border);
    border-radius: var(--radius-lg);
    padding: var(--space-5);
    box-shadow: var(--shadow-sm);
  }
  
  .card-title {
    font-size: var(--font-size-sm);
    font-weight: var(--font-weight-medium);
    color: var(--color-text-muted);
    margin-bottom: var(--space-4);
  }
  
  /* ── Score card ─────────────────────────────────────────────────────────── */
  
  .score {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 100%;
  }
  
  .score-big {
    font-size: var(--font-size-5xl);
    font-weight: var(--font-weight-semibold);
    line-height: 1;
    letter-spacing: -0.02em;
    font-variant-numeric: tabular-nums;
    color: var(--color-text);
    margin: var(--space-3) 0 var(--space-2);
  }
  
  .score-big.good { color: var(--color-score-good); }
  .score-big.mid  { color: var(--color-score-mid); }
  .score-big.bad  { color: var(--color-score-bad); }
  
  .score-label {
    font-size: var(--font-size-sm);
    color: var(--color-text-subtle);
  }
  
  .score-meta {
    display: flex;
    gap: var(--space-5);
    margin-top: var(--space-4);
    font-size: var(--font-size-sm);
    color: var(--color-text-muted);
  }
  
  .score-meta strong {
    display: block;
    font-size: var(--font-size-base);
    font-weight: var(--font-weight-semibold);
    color: var(--color-text);
    font-variant-numeric: tabular-nums;
  }
  
  /* ── Timeline card ──────────────────────────────────────────────────────── */
  
  .timeline-card { min-height: 100%; display: flex; flex-direction: column; }
  
  .timeline-svg-wrap {
    flex: 1;
    display: flex;
    align-items: center;
  }
  
  .timeline-svg {
    width: 100%;
    height: 140px;
    display: block;
  }
  
  .timeline-svg .tl-axis {
    stroke: var(--color-border);
    stroke-width: 1;
  }
  
  .timeline-svg .tl-label {
    fill: var(--color-text-subtle);
    font-size: 11px;
    font-family: var(--font-family-sans);
  }
  
  /* ── List rows (planned / discovered / apps / nudges) ──────────────────── */
  
  .list { list-style: none; }
  
  .list li {
    padding: var(--space-3) 0;
    border-bottom: 1px solid var(--color-border);
    display: grid;
    gap: var(--space-1);
  }
  
  .list li:last-child { border-bottom: none; padding-bottom: 0; }
  .list li:first-child { padding-top: 0; }
  
  .row-main {
    display: flex;
    justify-content: space-between;
    align-items: baseline;
    gap: var(--space-3);
  }
  
  .row-name {
    color: var(--color-text);
    font-weight: var(--font-weight-medium);
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
  }
  
  .row-meta {
    font-size: var(--font-size-sm);
    color: var(--color-text-subtle);
    font-variant-numeric: tabular-nums;
    white-space: nowrap;
  }
  
  .bar {
    height: 4px;
    background: var(--color-border);
    border-radius: 2px;
    overflow: hidden;
    margin-top: var(--space-2);
  }
  
  .bar-fill {
    height: 100%;
    background: var(--color-planned);
    border-radius: 2px;
  }
  
  .row-seen {
    font-size: var(--font-size-xs);
    color: var(--color-text-subtle);
  }
  
  .row-signals {
    display: flex;
    flex-wrap: wrap;
    gap: var(--space-1);
    margin-top: var(--space-2);
  }
  
  .pill {
    display: inline-block;
    padding: 2px 8px;
    font-size: var(--font-size-xs);
    color: var(--color-text-muted);
    background: var(--color-bg);
    border: 1px solid var(--color-border);
    border-radius: 100px;
  }
  
  .pill.promoted {
    color: var(--color-accent);
    border-color: var(--color-accent);
    background: transparent;
  }
  
  .empty {
    font-style: italic;
    color: var(--color-text-subtle);
    font-size: var(--font-size-sm);
    padding: var(--space-4) 0;
    text-align: center;
  }
  
  .footer-note {
    font-size: var(--font-size-xs);
    color: var(--color-text-subtle);
    text-align: center;
    margin-top: var(--space-6);
  }
  
  /* ── Plan-management buttons & forms ────────────────────────────────────── */
  
  .btn {
    display: inline-flex;
    align-items: center;
    gap: var(--space-1);
    padding: var(--space-1) var(--space-3);
    font-size: var(--font-size-xs);
    font-family: var(--font-family-sans);
    font-weight: var(--font-weight-medium);
    color: var(--color-text-muted);
    background: var(--color-bg);
    border: 1px solid var(--color-border);
    border-radius: var(--radius-sm);
    cursor: pointer;
    text-decoration: none;
    transition: background 0.15s ease, color 0.15s ease, border-color 0.15s ease;
  }
  
  .btn:hover {
    color: var(--color-text);
    border-color: var(--color-text-subtle);
  }
  
  .btn:focus-visible {
    outline: 2px solid var(--color-accent);
    outline-offset: 2px;
  }
  
  .btn-primary {
    color: #ffffff;
    background: var(--color-accent);
    border-color: var(--color-accent);
  }
  
  .btn-primary:hover {
    background: var(--color-accent-hover);
    border-color: var(--color-accent-hover);
    color: #ffffff;
  }
  
  .row-actions {
    display: flex;
    gap: var(--space-2);
    margin-top: var(--space-2);
    opacity: 0.55;
    transition: opacity 0.15s ease;
  }
  
  .list li:hover .row-actions,
  .list li:focus-within .row-actions { opacity: 1; }
  
  .inline-form {
    display: inline-flex;
    align-items: center;
    gap: var(--space-2);
    margin: 0;
  }
  
  /* CSS-only toggle for inline edit / add forms. A hidden checkbox holds the
     state; its :checked state reveals the row-edit sibling and hides row-view. */
  
  .edit-toggle {
    position: absolute;
    opacity: 0;
    pointer-events: none;
    width: 1px;
    height: 1px;
  }
  
  .row-edit {
    display: none;
    flex-direction: column;
    gap: var(--space-2);
    padding: var(--space-3) 0;
  }
  
  .edit-toggle:checked + .row-view { display: none; }
  .edit-toggle:checked + .row-view + .row-edit { display: flex; }
  
  .row-edit input[type="text"],
  .row-edit input:not([type="hidden"]) {
    padding: var(--space-2) var(--space-3);
    font-family: var(--font-family-sans);
    font-size: var(--font-size-sm);
    color: var(--color-text);
    background: var(--color-bg);
    border: 1px solid var(--color-border);
    border-radius: var(--radius-sm);
  }
  
  .row-edit input:focus {
    outline: 2px solid var(--color-accent);
    outline-offset: 1px;
    border-color: var(--color-accent);
  }
  
  .form-actions {
    display: flex;
    gap: var(--space-2);
    margin-top: var(--space-1);
  }
  
  .add-task-row {
    border-bottom: none !important;
    padding-top: var(--space-3) !important;
  }
  
  .add-task-row .row-view {
    text-align: left;
  }
  </style>
  <script src="/static/htmx.min.js" defer></script>
  </head>
  <body hx-headers='{"X-CSRF-Token": "TEST_CSRF_TOKEN_FIXED_VALUE_FOR_SNAPSHOT_STABILITY_DO_NOT_USE_IN_PROD"}'>
  <main class="container">
  <header class="page-header">
    <div class="brand">
      <span class="brand-name">Focus Monitor</span>
      <span class="brand-date">Saturday, April 11</span>
    </div>
    <nav class="range-toggle" aria-label="Time range"><a href="/?range=today">Today</a><a href="/?range=yesterday" class="current" aria-current="page">Yesterday</a><a href="/?range=7d">Last 7 days</a></nav>
  </header>
  <section class="zone zone-hero" aria-label="Today at a glance">
  <div class="card score">
    <div class="card-title">Focus score</div>
    <div class="score-big" aria-label="Average focus score">—</div>
    <div class="score-label">no data yet</div>
  </div>
  <div class="card timeline-card">
    <div class="card-title">Timeline</div>
    <div class="empty">No activity recorded yet.</div>
  </div>
  </section>
  <section class="zone zone-primary" aria-label="Plan and discoveries">
  <div id="planned-card" class="card"><div class="card-title">Planned focus</div><ul class="list"><li class="planned-row"><input type="checkbox" id="ptask-edit-focus-monitor" class="edit-toggle" aria-hidden="true"><div class="row-view"><div class="row-main"><span class="row-name">focus-monitor</span><span class="row-meta">not seen</span></div><div class="bar"><div class="bar-fill" style="width:0%"></div></div><div class="row-actions"><label for="ptask-edit-focus-monitor" class="btn">edit</label><form class="inline-form" hx-post="/api/planned-tasks/focus-monitor/delete" hx-target="#planned-card" hx-swap="outerHTML" hx-confirm="Delete &quot;focus-monitor&quot;?"><input type="hidden" name="csrf" value="TEST_CSRF_TOKEN_FIXED_VALUE_FOR_SNAPSHOT_STABILITY_DO_NOT_USE_IN_PROD"><button type="submit" class="btn" aria-label="Delete focus-monitor">delete</button></form></div></div><form class="row-edit" hx-post="/api/planned-tasks/focus-monitor" hx-target="#planned-card" hx-swap="outerHTML"><input type="hidden" name="csrf" value="TEST_CSRF_TOKEN_FIXED_VALUE_FOR_SNAPSHOT_STABILITY_DO_NOT_USE_IN_PROD"><input name="signals" value="focus-monitor, focusmonitor" placeholder="signals, comma, separated" aria-label="Signals for focus-monitor"><input name="notes" value="Work on the focus-monitor project itself." placeholder="notes" aria-label="Notes for focus-monitor"><div class="form-actions"><button type="submit" class="btn btn-primary">save</button><label for="ptask-edit-focus-monitor" class="btn">cancel</label></div></form></li><li class="planned-row"><input type="checkbox" id="ptask-edit-deep-reading" class="edit-toggle" aria-hidden="true"><div class="row-view"><div class="row-main"><span class="row-name">Deep Reading</span><span class="row-meta">not seen</span></div><div class="bar"><div class="bar-fill" style="width:0%"></div></div><div class="row-actions"><label for="ptask-edit-deep-reading" class="btn">edit</label><form class="inline-form" hx-post="/api/planned-tasks/Deep%20Reading/delete" hx-target="#planned-card" hx-swap="outerHTML" hx-confirm="Delete &quot;Deep Reading&quot;?"><input type="hidden" name="csrf" value="TEST_CSRF_TOKEN_FIXED_VALUE_FOR_SNAPSHOT_STABILITY_DO_NOT_USE_IN_PROD"><button type="submit" class="btn" aria-label="Delete Deep Reading">delete</button></form></div></div><form class="row-edit" hx-post="/api/planned-tasks/Deep%20Reading" hx-target="#planned-card" hx-swap="outerHTML"><input type="hidden" name="csrf" value="TEST_CSRF_TOKEN_FIXED_VALUE_FOR_SNAPSHOT_STABILITY_DO_NOT_USE_IN_PROD"><input name="signals" value="paper.pdf, arxiv" placeholder="signals, comma, separated" aria-label="Signals for Deep Reading"><input name="notes" value="" placeholder="notes" aria-label="Notes for Deep Reading"><div class="form-actions"><button type="submit" class="btn btn-primary">save</button><label for="ptask-edit-deep-reading" class="btn">cancel</label></div></form></li><li class="add-task-row"><input type="checkbox" id="ptask-add" class="edit-toggle" aria-hidden="true"><div class="row-view"><label for="ptask-add" class="btn">+ Add planned task</label></div><form class="row-edit" hx-post="/api/planned-tasks" hx-target="#planned-card" hx-swap="outerHTML"><input type="hidden" name="csrf" value="TEST_CSRF_TOKEN_FIXED_VALUE_FOR_SNAPSHOT_STABILITY_DO_NOT_USE_IN_PROD"><input name="name" placeholder="task name" required aria-label="New task name"><input name="signals" placeholder="signals, comma, separated" aria-label="New task signals"><input name="notes" placeholder="notes" aria-label="New task notes"><div class="form-actions"><button type="submit" class="btn btn-primary">add</button><label for="ptask-add" class="btn">cancel</label></div></form></li></ul></div>
  <div id="discovered-card" class="card"><div class="card-title">Discovered activities</div><ul class="list"><li><div class="row-main"><span class="row-name">news </span><span class="row-meta">seen 1×</span></div><div class="row-seen">last Apr 12, 11:30</div><div class="row-actions"><form class="inline-form" hx-post="/api/discoveries/news/promote" hx-target="#discovered-card" hx-swap="outerHTML"><input type="hidden" name="csrf" value="TEST_CSRF_TOKEN_FIXED_VALUE_FOR_SNAPSHOT_STABILITY_DO_NOT_USE_IN_PROD"><button type="submit" class="btn btn-primary" aria-label="Promote news">promote</button></form><form class="inline-form" hx-post="/api/discoveries/news/hide" hx-target="#discovered-card" hx-swap="outerHTML"><input type="hidden" name="csrf" value="TEST_CSRF_TOKEN_FIXED_VALUE_FOR_SNAPSHOT_STABILITY_DO_NOT_USE_IN_PROD"><button type="submit" class="btn" aria-label="Hide news">hide</button></form></div></li></ul></div>
  </section>
  <section class="zone zone-secondary" aria-label="Apps and nudges">
  <div class="card"><div class="card-title">Top apps</div><div class="empty">No app data yet.</div></div>
  <div class="card"><div class="card-title">Recent nudges</div><div class="empty">No nudges sent.</div></div>
  </section>
  <p class="footer-note">Focus Monitor · local-only · all data stays on this Mac</p>
  </main>
  </body>
  </html>
  
  '''
# ---
